[project]
name = "chroma-mcp-server"
version = "0.1.0"
description = "Template for a FastAPI application that serves as a server inspector for ChromaDB, providing endpoints to interact with collections and documents."
readme = "README.md"
requires-python = ">=3.12"
license.file = "LICENSE"
dependencies = [
    "fastapi[standard]>=0.115.9",
    "fastmcp>=2.4.0",
    "mcp[cli]>=1.9.0",
    "chromadb>=1.0.10",
    "langchain-chroma>=0.2.2",
    "langchain-ollama>=0.3.3",
]
authors = [
    { name = "Lim Phanith", email = "limphanith.dev@gmail.com" }
]
